src/test/deca/syntax/invalid/missing-brace.deca
// Description:
//    Programme avec une accolade fermante manquante.
//
// Résultats:
//    Ligne 6 : Erreur de syntaxe.
//
// Historique:
//    créé le 01/01/2025

{
    println("Bonjour!");
    println("Erreur");
